# RCV-tele-bot

./: .gitignore  .uuid  BaseAPI.py  BaseLoader.py  Cargo.toml  LICENSE  MessageBuilder.py  ModifiedTeleUpdate.py  PollsLockManager.py  PyVotesCounter.py  README.md  RankedChoice.py  RankedVote.py  SpecialVotes.py  UpdateLocksManager.py  backend.py  base_api.py  bot.py  bot_middleware.py  config.example.yml  contexts.py  database.py  docker-compose.example.yml  enum_test.py  load_config.py  middleware.py  migrations.json  modified_tele_update.py  pass_gen.py  proposed_changes.md  py_rcv.pyi  pyproject.toml  ranked_choice.py  ranked_choice_vote.pyi  requirements.txt  result_plus.py  schema.sql  sql-schema.sql  strings.py  tele_helpers.py  (+3 more)
.github/: algo_tests.yml
database/: .uuid  __init__.py  callback_context_state.py  database.py  db_helpers.py  message_context_state.py  payments.py  setup.py  test_database.py  users.py
handlers/: .uuid  __init__.py  chat_context_handlers.py  context_handlers.py  inline_keyboard_handlers.py  payment_handlers.py  start_get_params.py  start_handlers.py
helpers/: .uuid  __init__.py  chat_contexts.py  commands.py  constants.py  contexts.py  helpers.py  locks_manager.py  message_contexts.py  rcv_tally.py  redis_cache_manager.py  special_votes.py  strings.py  subscription_tiers.py
images/: RCV-SS2.xcf
logs/: log_events.txt
migrations/: 0001_migration_202404290035.py  0001_migration_202407272210.py  0001_migration_202408242136.py  0002_migration_202404290039.py  0002_migration_202407281008.py  0002_migration_202410012257.py  (+13 more)
(+38 files in other folders)
