[package]
name = "ranked-choice-vote"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ranked_choice_vote"
crate-type = ["cdylib", "rlib"]

[dependencies]
trie_rcv = "1.2.2"
pyo3 = { version = "0.21.2", features = ["extension-module"] }
pyo3-stub-gen = "0.6.0"
serde = "1.0.210"

[package.metadata.maturin]
name = "ranked_choice_vote"
generate-pyi = true

[[bin]]
name = "stub_gen"
path = "src/bin/stub_gen.rs"