[package]
name = "py_rcv"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "py_rcv"
crate-type = ["cdylib", "rlib"]

[dependencies]
trie_rcv = "1.3.1"
pyo3 = { version = "0.22.5", features = ["extension-module"] }
pyo3-stub-gen = "0.6.0"
serde = "1.0.210"
serde_json = "1.0.128"

[[bin]]
name = "stub_gen"
path = "src/bin/stub_gen.rs"